routes using user_controller

--- a/views/partials/summoner_search.ejs
+++ b/views/partials/summoner_search.ejs
@@ -1,20 +1,8 @@
-<form method="post" action="#">
-	<input type="text" name="summoner_name" placeholder="Enter a summoner name">
+<form method="get" action="/profile/summonner">
+	<input type="text" name="summonner_name" placeholder="Enter a summonner name">
 	<input type="submit" name="Search">
 	<ul id="testId">
 		
 	</ul>
 </form>
-<!-------------------- SCRIPTS -------------------------->
-  <script
-    src="http://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous">    
-  </script>
-  <script 
-    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
-  </script>
-  <script 
-    src="scripts/app.js">
-  </script>
+  
