--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Candy App</title>
-	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Landing</title>
+
+  <link rel="stylesheet" href="/styles/reset.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
-
 <body>
-	<h1> 
-		<a href="https://www.youtube.com/">Candy Shoppe</a>
-	</h1>
-	<div class="container">
-			<% for(var i = 0; i < candies.length; i++) { %>
-			<ul>
-				<li><b>Name: </b>  <%= candies[i].name %> </li>
-				<li><b>Color: </b> <%= candies[i].color %> </li>
-			</ul>
-			<%} %>
-		
-	</div>
+	<div class="container"> <% include ./partials/navbar %> </div>
+
+	<div class="container"> <% include ./partials/summoner_search %> </div>
+
 	<hr>
-	<div class="container">
-		<% include ./partials/candy/form %>
-	</div>
-	<div class="container">
-		<% include ./partials/candy/footer %>
-	</div>
+	
+	<div class="container"> <% include ./partials/footer %> </div>
+  <div class="container"> <% include ./partials/scripts %> </div>
+
 </body>
 </html>
