continues to build routes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
             </div>
             <div class="form-group">
               <div class="col-xs-2 col-xs-offset-2">
-                <button class="btn btn-default" type="submit" name="sign-in-btn">Sign In</button>
+                <button id="sign-in-btn" class="btn btn-default" type="submit" name="sign-in-btn">Sign In</button>
               </div>
             </div>
           </form>
@@ -101,18 +101,8 @@
     </div>
   </div>
   
-<!-------------------- SCRIPTS -------------------------->
-<script
-  src="http://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous">
-</script>
-<script 
-  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
-  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
-</script>
-<script 
-  src="scripts/app.js">
-</script>
+  <div class="container"> <% include ./partials/footer %> </div>
+  <div class="container"> <% include ./partials/scripts %> </div>
+
 </body>
 </html>
