--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,7 +15,7 @@
 	    		<li class=""><a href="#">Separated link</a></li>
 		    </ul>
 		</li>
-		<li class="active" role="presentation">
+		<li class="" role="presentation">
 			<a href="#">Profile</a>
 		</li>
 		<li role="presentation" class="">
