--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Landing</title>
+  <title>Layout</title>
 
   <link rel="stylesheet" href="/styles/reset.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -15,7 +15,7 @@
 <body>
 	<div class="container"> <% include ./partials/navbar %> </div>
 
-	<div class="container"> <% include ./partials/summoner_search %> </div>
+	<div class="container"> <% include ./partials/champion_search %> </div>
 
 	<hr>
 	
