--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
   <div class="container">
     <div class="row text-center">
       <div class="btn-group" data-toggle="button" aria-pressed="false">
-        <button class="btn btn-default btn-lg" data-toggle="collapse" data-target="#sign-in-form" aria-expanded="false" aria-controls="sign-in-form">Log In</button>
+        <label class="btn btn-default btn-lg" data-toggle="collapse" data-target="#sign-in-form" aria-expanded="false" aria-controls="sign-in-form" autocomplete="off">Sign-In</label>
         <button class="btn btn-default btn-lg" data-toggle="collapse" data-target="#sign-up-form" aria-expanded="false" aria-controls="sign-up-form">Register</button>
       </div>  
     </div>
