--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,14 +13,16 @@
 </head>
 
 <body>
-	<div class="container"> <% include ./partials/navbar %> </div>
 
-	<div class="container"> <% include ./partials/champion_search %> </div>
+  <% include ./partials/navbar %>
 
-	<hr>
-	
-	<div class="container"> <% include ./partials/footer %> </div>
-  <div class="container"> <% include ./partials/scripts %> </div>
+  <div class="container"> 
+    <% include ./partials/champion_search %> 
+  </div>
+
+  <hr>
+  <% include ./partials/footer %>
+  <% include ./partials/scripts %>
 
 </body>
 </html>
