--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,5 @@
-<div class="container">
-<footer>
-	
-<p> D.B.T &copy; </p>
-
+<div class="navbar navbar-fixed-bottom">
+<footer class="container-fluid text-center">
+		<p> DevByT &copy; 2017 </p>
 </footer>
 </div>
