--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,5 @@
-	<ul class="nav nav-tabs nav-justified">
+<nav class="navbar navbar-default container-fluid">
+	<ul class="nav nav-pills navbar-nav">
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 		      Endpoints <span class="caret"></span>
@@ -15,13 +16,24 @@
 	    		<li class=""><a href="#">Separated link</a></li>
 		    </ul>
 		</li>
-		<li class="" role="presentation">
+	</ul>	
+	<ul class="nav nav-pills navbar-nav navbar-right">
+		<li role= "presentation" class="dropdown">
+			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" ><span class="caret"></span>Champions</a>
+		    <ul class="dropdown-menu">
+			    <li class=""><a href="#">GET</a></li>
+			    <li class=""><a href="#">/api</a></li>
+			    
+			    <li role="separator" class="divider"></li>
+	    		<li class=""><a href="#">Another action</a></li>
+	   			<li class=""><a href="#">Something else here</a></li>
+	    		
+	    		<li role="separator" class="divider"></li>
+	    		<li class=""><a href="#">Separated link</a></li>
+		    </ul>
+		</li>
+		<li role="presentation">
 			<a href="#">Profile</a>
 		</li>
-		<li role="presentation" class="">
-			<a href="#">Champions</a>
-		</li>
-		<li class="" role="presentation">
-			<a href="#">...</a>
-		</li>
 	</ul>
+</nav>	
