--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -1,39 +1,59 @@
-<form method="get" action="/profile/summonner">
-	<input type="text" name="summonner_name" placeholder="Enter a summonner name">
-	<input type="submit" name="Search">
-</form>
+<div class="panel panel-default">
+	<div class="panel-body container">
+		<form method="get" action="/profile/summonner">		
+			
+			<div class="form-group col-sm-6">
+				<div class="input-group">
+					<span class="input-group-btn">
+						<button class="btn btn-default">Go</button>
+				    </span>
+				    <input class="form-control" type="text" name="list-item" placeholder="Search by name">
+				</div>
+		    </div>
+				
+
+			<div class="form-group col-sm-6">
+				<div class="input-group">
+				<span class="label label-default">label</span> 
+				<input type="checkbox" name="Search">
+				</div>
+			</div>
+
+		</form>
+	</div>
+</div>
 <div id="champion_container" class="container">
 		<div class="row">
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
 		</div>
 		<div class="row">
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
 		</div>
 		<div class="row">
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
 		</div>
 		<div class="row">
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
-			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
+			<div class="col-md-2 col-sm-4 col-xs-6"><img class="img-responsive center-block img-thumbnail" src="">-</div>
 		</div>
 </div>
   
