--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,88 +13,90 @@
 </head>
 
 <body>
+	<% include ./partials/navbar %>
 
-	<ul class="nav nav-tabs">
-		<li role="presentation" class="dropdown">
-			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-		      Endpoints <span class="caret"></span>
-		    </a>
-		    <ul class="dropdown-menu">
-			    <li class=""><a href="#">GET</a></li>
-			    <li class=""><a href="#">/api</a></li>
-			    
-			    <li role="separator" class="divider"></li>
-	    		<li class=""><a href="#">Another action</a></li>
-	   			<li class=""><a href="#">Something else here</a></li>
-	    		
-	    		<li role="separator" class="divider"></li>
-	    		<li class=""><a href="#">Separated link</a></li>
-		    </ul>
-		</li>
-		<li class="active" role="presentation">
-			<a href="#">Profile</a>
-		</li>
-		<li role="presentation" class="">
-			<a href="#">Champions</a>
-		</li>
-		<li class="" role="presentation">
-			<a href="#">...</a>
-		</li>
-	</ul>
-
-	<div class="jumbotron">
-		<div class="container">
-			<h1 class="text-center">Summonner Name</h1>
-		</div></div>
-	
+	<div class="container-fluid">
+		<h1 class="text-center">Summonner Name</h1>
+	</div>	
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-8 text-left">
+			<div class="col-sm-4 text-left">
 				<h3>Your Trending Champs</h3>
 				<div class="row">
-					<div class="col-sm-3 col-sm-offset-1"><img class="img-responsive" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png"></div>
+					<div class="col-sm-3 col-sm-offset-1"><img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png"></div>
 					<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
 				</div>
 				<div class="row">
 					<div class="col-sm-3 col-sm-offset-1">
-						<img class="img-responsive" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png">
+						<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png">
 					</div>
 					<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
 				</div>
 				<div class="row">
 					<div class="col-sm-3 col-sm-offset-1">
-						<img class="img-responsive" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png">
+						<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png">
 					</div>
 					<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
 				</div>	
 			</div>
-			<div class="col-sm-4 text-center">
-				<h3>Your Favorite Champs</h3>
-				<ul>
-					<li>
-						<input type="text" name="list-item">
-						<button class="glyphicon glyphicon-edit"></button>
-						<button class="glyphicon glyphicon-trash"></button>
-					</li>
-					<li>4</li>
-					<li>4</li>
-					<li>4</li>
-					<li>4</li>
-					<li>4</li>
-				</ul>
-					
+			<div class="col-sm-8 text-center">
+				<h3>Your League</h3>
+				<div id="accordion" class="panel-group" role="tablist" aria-multiselectable="true">
+					<div class="panel panel-default">
+						<div class="panel panel-heading" role="tab">
+							<a class="collapsed" role="button" data-toggle="collapse" data-parent="accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+								<h3 class="panel-title">
+									 Panel Title 1
+								</h3>
+							</a>
+							
+						</div>
+						<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+							    <ul class="list-group">
+								    <li class="list-group-item">LiSt item</li>
+								    <li class="list-group-item">LiSt item</li>
+								</ul>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel panel-heading" role="tab">
+							<a class="collapsed" role="button" data-toggle="collapse" data-parent="accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								<h3 class="panel-title">
+									 Panel Title 2
+								</h3>	
+							</a>
+							
+						</div>
+						<div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
+						    <ul class="list-group">
+						    	<li class="list-group-item">
+  									<div class="input-group">
+	  									<input class="form-control" aria-label="???">
+  										<div class="input-group-btn">
+  											<button class="btn btn-default"><span class="glyphicon glyphicon-edit"></span></button>
+											<button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></button>
+  										</div>
+  									</div>
+								</li>
+
+							    <li class="list-group-item">LiSt item</li>
+							    <li class="list-group-item">LiSt item</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div></div>
 	
 	<hr>
 
-	<div class="container">
+	<div class="container-fluid">
 		<div class="col-sm-12 text-center">
-			<button class="col-sm-6 col-sm-offset-3"><a href="./champs.html">Search Champions</a></button>
-		</div></div>
+			<a href="./champions"><button class="col-sm-6 col-sm-offset-3">Search Champions</button></a>
+		</div>
+	</div>
 
-	<div class="container"> <% include ./partials/footer %> </div>
-  <div class="container"> <% include ./partials/scripts %> </div>
+    <% include ./partials/footer %>
+    <% include ./partials/scripts %>
 
 </body>
 </html>
