--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -27,9 +27,12 @@
           <input type="radio" autocomplete="off">Sign-In
         </label>
         
-        <label class="btn btn-default btn-lg" data-toggle="collapse" data-target="#sign-up-form" aria-expanded="false" aria-controls="sign-up-form">
-          <input type="radio" autocomplete="off">Register
-        </label>
+        
+        <a href="newUserform.ejs">
+          <button id="register-btn" class="btn btn-default btn-lg">
+          Register
+          </button>
+        </a>
       </div>  
     </div>
     <div class="row">
@@ -65,43 +68,6 @@
           </form>
         </div>
       </div>
-        <div id="sign-up-form" class="container collapse">
-          <form class="form-horizontal">
-            <div class="form-group">
-              <div class="col-xs-10">
-                <h1>Sign-Up</h1>
-              </div>
-            </div>
-            <div class="form-group has-error">
-              <label class="control-label col-xs-2">Email</label>
-              <div class="col-xs-9">
-                <input class="form-control" type="email" name="email" placeholder="Email">
-              </div>
-            </div>
-            <div class="form-group has-error">
-              <label class="control-label col-xs-2">Password</label>
-              <div class="col-xs-9">
-                <input class="form-control" type="password" name="password" placeholder="Password">
-              </div>
-            </div>
-            <div class="form-group has-error has-success">
-              <label class="control-label col-xs-2">Summonner Name</label>
-              <div class="col-xs-9">
-                <input class="form-control" type="text" name="summoner-name" placeholder="Summonner Name">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-xs-2 col-xs-offset-2">
-                <input type="checkbox" name="remember-me">Remember Me
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-xs-2 col-xs-offset-2">
-                <button id="sign-up-btn" class="btn btn-default" type="submit" name="sign-up-btn">Sign Up</button>
-              </div>
-            </div>
-          </form>
-        </div>
       </div>
     </div>
   </div>
