--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<% include ./partials/head %>
 
-  <title>Landing</title>
-
-  <link rel="stylesheet" href="styles/reset.css">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/styles.css">
-</head>
 <body>
 
   <div class="jumbotron">
@@ -28,10 +18,9 @@
         </label>
         
         
-        <a href="newUserform.ejs">
-          <button id="register-btn" class="btn btn-default btn-lg">
-          Register
-          </button>
+        <a href="/signup">
+          <input id="register-btn" class="btn btn-default btn-lg" value="Sign Up">
+          
         </a>
       </div>  
     </div>
