--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Profile</title>
-
-  <link rel="stylesheet" href="/styles/reset.css">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/styles.css">
-</head>
+<% include ./partials/head %>
 
 <body>
 	<% include ./partials/navbar %>
