gets passport signup working

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,26 +1,19 @@
 <% include ./partials/head.ejs %>
 
 <% if (message.length > 0) { %>
-  <div class="alert"><%= message %> </div>
-<% } %>
+   <div class="alert"><%= message %> </div>
+ <% } %>
 <body>
+<h1>Sign-Up</h1>
   <form method="post" action="/signup" class="form-horizontal">
+  <div class="container">  
     <div class="form-group">
-      <div class="col-xs-10">
-        <h1>Sign-Up</h1>
-      </div>
+      <label for="email">Email</label>
+        <input class="form-control" type="text" name="email" id="email">
     </div>
     <div class="form-group">
-      <label for="email" class="control-label col-xs-2" >Email</label>
-      <div class="col-xs-9">
-        <input class="form-control" type="text" name="email" id="email" placeholder="enter your email">
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="password" class="control-label col-xs-2">Password</label>
-      <div class="col-xs-9">
-        <input class="form-control" type="password" name="password" id="password" placeholder="password">
-      </div>
+      <label for="password">Password</label>
+        <input class="form-control" type="password" name="password" id="password">
     </div>
     <!-- <div class="form-group">
       <label class="control-label col-xs-2">Summonner Name</label>
@@ -28,11 +21,8 @@
         <input class="form-control" type="text" name="summoner-name" placeholder="Summonner Name">
       </div>
     </div>  -->
-    <div class="form-group">
-      <div class="col-xs-2 col-xs-offset-2">
-        <input id="sign-up-btn" class="btn btn-default" type="submit" name="sign-up-btn" value="Sign Up">
-      </div>
-    </div>
+        <input class="btn btn-default" type="submit">
+  </div>      
   </form>
 
 <% include ./partials/footer.ejs %>
