creates login/logout but breaks signup

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,8 +5,8 @@
  <% } %>
 
 <body>
-<h1>Sign-Up</h1>
-  <form method="post" action="/signup" class="form-horizontal">
+<h1>Login</h1>
+  <form method="post" action="/login" class="form-horizontal">
   <div class="container">  
     <div class="form-group">
       <label for="email">Email</label>
@@ -16,7 +16,7 @@
       <label for="password">Password</label>
         <input class="form-control" type="password" name="password" id="password">
     </div>
-    
+
         <input class="btn btn-default" type="submit">
   </div>      
   </form>
