--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,6 +18,13 @@
 		</li>
 	</ul>	
 	<ul class="nav nav-pills navbar-nav navbar-right">
+		<% if(currentUser) {%>
+			<li><a href="/logout">Logout:  <%= "  " + currentUser.local.email %> </a></li>
+		<% } else { %>
+			<li><a href="/login">Login</a></li>
+            <li><a href="/signup">Signup</a></li>
+
+			<% } %>
 		<li role= "presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" ><span class="caret"></span>Champions</a>
 		    <ul class="dropdown-menu">
