--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,7 +6,7 @@
 
 <body>
 <h1>Sign-Up</h1>
-  <form method="post" action="/signup" class="form-horizontal">
+  <form method="post" action="/signup">
   <div class="container">  
     <div class="form-group">
       <label for="email">Email</label>
@@ -16,7 +16,6 @@
       <label for="password">Password</label>
         <input class="form-control" type="password" name="password" id="password">
     </div>
-    
         <input class="btn btn-default" type="submit">
   </div>      
   </form>
