--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,12 @@
 	<% include ./partials/navbar %>
 
 	<div class="container-fluid">
-		<h1 class="text-center">Summonner Name</h1>
+	<% if(currentUser) { %>
+		<h1 class="text-center"><%= currentUser.local.email + "'s Homepage" %></h1>
+	<% } else { %>
+		<h1 class="text-center">Summoner Name</h1>
+
+	<% } %>
 	</div>	
 	<div class="container">
 		<div class="row">
@@ -16,13 +21,13 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-3 col-sm-offset-1">
-						<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png">
+						<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Veigar.png">
 					</div>
 					<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
 				</div>
 				<div class="row">
 					<div class="col-sm-3 col-sm-offset-1">
-						<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png">
+						<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Warwick.png">
 					</div>
 					<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
 				</div>	
