--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,25 +1,25 @@
 <% include ./partials/head.ejs %>
 
 <% if (message.length > 0) { %>
-   <div class="alert"><%= message %> </div>
+   <div class="alert"> <%= message %> </div>
  <% } %>
 
-<body>
-<h1>Sign-Up</h1>
-  <form method="post" action="/signup">
-  <div class="container">  
-    <div class="form-group">
-      <label for="email">Email</label>
-        <input class="form-control" type="text" name="email" id="email">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-        <input class="form-control" type="password" name="password" id="password">
-    </div>
-        <input class="btn btn-default" type="submit">
-  </div>      
-  </form>
+<h2>Signup</h2>
+
+<form method="POST" action="/signup" class="form-horizontal">
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input class="form-control" type="text" name="email" id="email">
+  </div>
+
+  <div class="form-group">
+    <label for="email">Password</label>
+    <input class="form-control" type="password" name="password" id="password">
+  </div>
+
+  <input class="btn btn-default" type="submit">
+</form>
 
 <% include ./partials/footer.ejs %>
 <% include ./partials/scripts.ejs %>
-</body>
+
