adds summoner_name field to signup

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,7 +5,7 @@
 
 	<div class="container-fluid">
 	<% if(currentUser) { %>
-		<h1 class="text-center"><%= currentUser.local.email + "'s Homepage" %></h1>
+		<h1 class="text-center"><%= currentUser.summoner_name + "'s Homepage" %></h1>
 	<% } else { %>
 		<h1 class="text-center">Summoner Name</h1>
 	<% } %>
