--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,12 +15,10 @@
       <label for="password">Password</label>
         <input class="form-control" type="password" name="password" id="password">
     </div>
-    <!-- <div class="form-group">
-      <label class="control-label col-xs-2">Summonner Name</label>
-      <div class="col-xs-9">
-        <input class="form-control" type="text" name="summoner-name" placeholder="Summonner Name">
-      </div>
-    </div>  -->
+    <div class="form-group">
+      <label for="summon_name">Summonner Name</label>
+        <input class="form-control" type="text" name="summoner_name">
+    </div>  
         <input class="btn btn-default" type="submit">
   </div>      
   </form>
