adds summoner title

--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -24,15 +24,16 @@
 </div>
 
 <section id="champion_container" class="container">
-		<div class="row">
-			<div class="col-md-10 col-md-offset-1">
-				<h3>Champions</h3>	
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<h3>Champions</h3>	
+				</div>
 			</div>
+			<!--Where Champs Go-->
+			<div id='champions'>
+			</div>
+			<!--Where Champs Stop -->
 		</div>
-		<!--Where Champs Go-->
-		<div id='champions'>
-			
-		</div>
-		<!--Where Champs Stop -->
 </section>
   
