--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,30 +1,41 @@
-<% include ./partials/head.ejs %>
+<% include ./partials/head-without-nav.ejs %>
 
 <% if (message.length > 0) { %>
    <div class="alert"><%= message %> </div>
  <% } %>
-<body>
-<h1>Login</h1>
-  <form method="post" action="/login" class="form-horizontal">
-  <div class="container">  
-    <div class="form-group">
-      <label for="email">Email</label>
-        <input class="form-control" type="text" name="email" id="email">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-        <input class="form-control" type="password" name="password" id="password">
-    </div>
-    <!-- <div class="form-group">
-      <label class="control-label col-xs-2">Summonner Name</label>
-      <div class="col-xs-9">
-        <input class="form-control" type="text" name="summoner-name" placeholder="Summonner Name">
-      </div>
-    </div>  -->
-        <input class="btn btn-default" type="submit">
-  </div>      
-  </form>
+<div class="container-fluid">
+<div class="container">  <!------------------------------ -->
+
+<form method="post" action="/login" class="form-horizontal">
+              
+              <div class="container">  <!------------------------------FORM-CONTENT-CONTAINER-->
+                <div class="col-xs-6 col-xs-offset-3">
+                    <div class="row">
+                      <div class="col-xs-12 text-center">
+                        <h1>Login</h1>
+                      </div>
+                    </div>
+                    <div class="row form-group">
+                      <div class="col-xs-8 col-xs-offset-2">
+                        <label class="sr-only" for="email">Email</label>
+                        <input class="form-control" type="text" name="email" id="email" placeholder="email">
+                      </div>    
+                    </div>
+                      
+                    <div class="row form-group">
+                      <div class="col-xs-8 col-xs-offset-2">
+                        <label class="sr-only" for="password">password</label>
+                        <input class="form-control" type="password" name="password" id="password" placeholder="password">
+                      </div>  
+                    </div>
+
+                    <div class="row">
+                      <input class="col-xs-8 col-xs-offset-2 btn btn-default" type="submit">
+                    </div>
+                </div> 
+              </div> <!------------------------------FORM-CONTENT-CONTAINER -->
+</form>
+</div>
+</div>
 
 <% include ./partials/footer.ejs %>
-<% include ./partials/scripts.ejs %>
-</body>
