--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,18 @@
 <div class="navbar navbar-fixed-bottom">
-<footer class="container-fluid text-center">
-		<p> DevByT &copy; 2017 </p>
-</footer>
+	<footer class="container-fluid text-center">
+			<p> DevByT &copy; 2017 </p>
+	</footer>
 </div>
+	<script
+	  src="http://code.jquery.com/jquery-3.2.1.min.js"
+	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+	  crossorigin="anonymous">
+	</script>
+	<script 
+	  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+	  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+	</script>
+	<script src="/scripts/app.js">	
+	</script>
+</body>
+</html>
