--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,4 +11,51 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/styles.css">
 </head>
-
+<body>
+<nav class="navbar navbar-default container-fluid">
+	<ul class="nav nav-pills navbar-nav">
+		<li role="presentation" class="dropdown">
+			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+		      Endpoints <span class="caret"></span>
+		    </a>
+		    <ul class="dropdown-menu">
+			    <li class=""><a href="#">GET</a></li>
+			    <li class=""><a href="#">/api</a></li>
+			    
+			    <li role="separator" class="divider"></li>
+	    		<li class=""><a href="#">Another action</a></li>
+	   			<li class=""><a href="#">Something else here</a></li>
+	    		
+	    		<li role="separator" class="divider"></li>
+	    		<li class=""><a href="#">Separated link</a></li>
+		    </ul>
+		</li>
+	</ul>	
+	<ul class="nav nav-pills navbar-nav navbar-right">
+		
+		<% if(currentUser) {%>
+			<li><a href="/logout">Logout:  <%= "  " + currentUser.local.email %> </a></li>
+		<% } else { %>
+			<li><a href="/login">Login</a></li>
+            <li><a href="/signup">Signup</a></li>
+			<% } %>
+		
+		<li role= "presentation" class="dropdown">
+			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" ><span class="caret"></span>Champions</a>
+		    <ul class="dropdown-menu">
+			    <li class=""><a href="#">GET</a></li>
+			    <li class=""><a href="#">/api</a></li>
+			    
+			    <li role="separator" class="divider"></li>
+	    		<li class=""><a href="#">Another action</a></li>
+	   			<li class=""><a href="#">Something else here</a></li>
+	    		
+	    		<li role="separator" class="divider"></li>
+	    		<li class=""><a href="#">Separated link</a></li>
+		    </ul>
+		</li>
+		<li role="presentation">
+			<a href="#">Profile</a>
+		</li>
+	</ul>
+</nav>	
