--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,28 +1,49 @@
-<% include ./partials/head.ejs %>
+
+<% include ./partials/head-without-nav.ejs %>
 
 <% if (message.length > 0) { %>
    <div class="alert"><%= message %> </div>
  <% } %>
-<body>
-<h1>Sign-Up</h1>
-  <form method="post" action="/signup" class="form-horizontal">
-  <div class="container">  
-    <div class="form-group">
-      <label for="email">Email</label>
-        <input class="form-control" type="text" name="email" id="email">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-        <input class="form-control" type="password" name="password" id="password">
-    </div>
-    <div class="form-group">
-      <label for="summon_name">Summonner Name</label>
-        <input class="form-control" type="text" name="summoner_name">
-    </div>  
-        <input class="btn btn-default" type="submit">
-  </div>      
-  </form>
+<div class="container-fluid">
+  <div class="container">  <!------------------------------ -->
+    <form method="post" action="/signup" class="form-horizontal">
+              
+          <div class="container">  <!------------------------------FORM-CONTENT-CONTAINER-->
+            <div class="col-xs-6 col-xs-offset-3">
+                <div class="row">
+                  <div class="col-xs-12 text-center">
+                    <h1>Sign Up</h1>
+                  </div>
+                </div>
+                <div class="row form-group">
+                  <div class="col-xs-8 col-xs-offset-2">
+                    <label class="sr-only" for="email">Email</label>
+                    <input class="form-control" type="text" name="email" id="email" placeholder="email">
+                  </div>    
+                </div>
+                  
+                <div class="row form-group">
+                  <div class="col-xs-8 col-xs-offset-2">
+                    <label class="sr-only" for="password">password</label>
+                    <input class="form-control" type="password" name="password" id="password" placeholder="password">
+                  </div>  
+                </div>
+
+                <div class="row form-group">
+                  <div class="col-xs-8 col-xs-offset-2">
+                    <label class="sr-only" for="summoner_name">Summoner Name</label>
+                    <input class="form-control" type="text" name="summoner_name" id="summoner_name" placeholder="Summoner Name">
+                  </div>  
+                </div>
+
+                <div class="row">
+                  <input class="col-xs-8 col-xs-offset-2 btn btn-default" type="submit">
+                </div>
+            </div> 
+          </div> <!------------------------------FORM-CONTENT-CONTAINER -->
+
+    </form>
+  </div>
+</div>
 
 <% include ./partials/footer.ejs %>
-<% include ./partials/scripts.ejs %>
-</body>
