adds champion modal and user fav list to html

--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -30,7 +30,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class=" col-xs-12 col-md-10 col-md-offset-1">
-					<h3>Champions</h3>	
+					<h5>Champions</h5>	
 				</div>
 			</div>
 			<!--Where Champs Go-->
@@ -39,4 +39,55 @@
 			<!--Where Champs Stop -->
 		</div>
 </section>
+
+<!-- begin songModal: this is not visible until you call .modal() on it -->
+<div class="modal fade" tabindex="-1" role="dialog" id="champModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Champion Name</h4>
+      </div>
+
+      <div class="modal-body">
+	    <fieldset class='form-horizontal'>
+			
+			<div class="row">
+				<!-- CHAMPION PROFILE IMAGE-->
+				<div class="form-group">
+		        	<div class="col-xs-4">
+		        		<img class="img img-responsive" src=""> 
+		        	</div>
+		        </div>
+		        <!-- Text input-->
+		        <div class="form-group">
+			        <div class="col-xs-6">
+			        	<label class="col-md-4 control-label sr-only" for="name">Name</label>
+			        	<div class="col-md-4">
+			        		<input id="songName" name="songName" type="text" placeholder="" class="form-control input-md" required="">
+			        	</div>
+			        </div>  
+		        </div>
+			</div>
+			
+        </fieldset>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" id="addChamp">Add to favorites</button>
+      </div>
+
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
   
+
+
+
+
+
+
+
+
+
