creates list model and adds has list boolean to user account

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,7 +33,7 @@
                 <div class="row form-group">
                   <div class="col-xs-8 col-xs-offset-2">
                     <label class="sr-only" for="summoner_name">Summoner Name</label>
-                    <input class="form-control" type="text" name="summoner_name" id="summoner_name" placeholder="Summoner Name">
+                    <input class="form-control" type="text" name="summoner_name" id="summoner_name" placeholder="Summoner Name" required="true">
                   </div>  
                 </div>
 
