changes list collection name to favorite

--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -40,7 +40,7 @@
 		</div>
 </section>
 
-<!-- begin songModal: this is not visible until you call .modal() on it -->
+<!-- begin champModal: this is not visible until you call .modal() on it -->
 <div class="modal fade" tabindex="-1" role="dialog" id="champModal">
   <div class="modal-dialog">
     <div class="modal-content">
