--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-bottom">
+<div class="navbar navbar-bottom">
 	<footer class="container-fluid text-center">
 			<p> DevByT &copy; 2017 </p>
 	</footer>
