--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,10 +8,10 @@
 		<h1 class="text-center">Summoner Name</h1>
 	<% } %>
 	</div>	
-	<div class="container list-group-item">
+	<div class="container list-group-item"><!------MAIN BODY LAYERING STARTS HERE---- -->
 		<div class="row">
 			
-			<div class="container">
+			<div class="container"><!------MAIN BODY CONTENT STARTS HERE---- -->
 	    		<div class="col-sm-4 text-left">
 					<h3 class="panel-title">Your Trending Champs</h3>
 					<hr>
@@ -43,7 +43,7 @@
 		                    <div class="panel panel-default">
 		                        <div class="panel-heading" role="tab" id="headingOne">
 		                            <h4 class="panel-title">
-		                				<a role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Recent Match Stats
+		                				<a role="button" data-toggle="collapse in" data-parent="#accordion2" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Recent Match Stats
 		                				</a>
 		            				</h4>
 		                        </div>
@@ -75,27 +75,26 @@
 												  	<div class="carousel-inner" role="listbox">
 												    
 												    	<div class="item active">
-												    		<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png">
-													    	<img class="img-responsive fav-champ-img"src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Veigar.png">
-
+															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Aatrox_0.jpg">
+								    	
 													    	<div class="carousel-caption"></div>
 												    	</div>
 
 												    	<div class="item">
-													    	<img class="img-responsive fav-champ-img"src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Veigar.png">
+															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Veigar_0.jpg">
 													    	<div class="carousel-caption"></div>
 												    	</div>
 													</div>
 
-												  <!-- Controls -->
-												  <a class="left carousel-control" href="#favorite-champ-carousel" role="button" data-slide="prev">
-												    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-												    <span class="sr-only">Previous</span>
-												  </a>
-												  <a class="right carousel-control" href="#favorite-champ-carousel" role="button" data-slide="next">
-												    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-												    <span class="sr-only">Next</span>
-												  </a>
+												<!-- Controls -->
+												<a class="left carousel-control" href="#favorite-champ-carousel" role="button" data-slide="prev">
+												  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+												  <span class="sr-only">Previous</span>
+												</a>
+												<a class="right carousel-control" href="#favorite-champ-carousel" role="button" data-slide="next">
+												  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+												  <span class="sr-only">Next</span>
+												</a>
 											</div>
 		                            	</div>
 
@@ -103,13 +102,20 @@
 		                            	<div class="row">
 											<div class="container-fluid">
 												<div class="col-sm-12 text-right">
-													<a href="../champions"><button class="btn btn-default btn-xs">Add Champions</button></a>
+												<% if (currentUser) { %>
+												<form action="/profile/:email" method="post">
+												    <input class="col-xs-8 col-xs-offset-2 btn btn-default" type="submit">
+												</form>
+												<% } else { %>
+													<a href="./champions"><button class="btn btn-def">Champions</button>
+												<% } %>
 												</div>
 											</div>
 										</div>
 		                            </div>
 		                        </div> <!--a carousel to display the favorites list possibly  -->
 		                    </div>
+
 		                    <div class="panel panel-default">
 		                        <div class="panel-heading" role="tab" id="headingThree">
 		                            <h4 class="panel-title">
@@ -127,7 +133,13 @@
 		                                <div class="row">
 											<div class="container-fluid">
 												<div class="col-sm-12 text-right">
-													<a href="../champions"><button class="btn btn-default btn-xs">Add Champions</button></a>
+												
+												<% if(currentUser) {%>
+													<a href='../champions/<%= + currentUser.local.email %> + '><button class="btn btn-alert btn-xs">   Add Champions</button></a>
+												<% } else { %>
+            										<a href="../champions"><button class="btn btn-default btn-xs">Add Champions</button></a>
+												<% } %>
+
 												</div>
 											</div>
 										</div>
